[package]
name = "calc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
fraction = "0.13.1"
lazy_static = "1.4.0"
nalgebra = "0.32.1"
ndarray = "0.15.6"
num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.6.1"
regex = "1.7.1"
serde = "1.0.152"
serde_json = "1.0.93"
smartcore = "0.3.0"
tokio = { version="1.25.0", features=["io-util","macros","net","rt","rt-multi-thread","sync","tokio-macros"] }
